# usfq-mmia

./: .gitignore  README.md  pyproject.toml
cnns/: complexcnn.ipynb
deep_learning/cnns/: complexcnn_finetune.ipynb  simplecnn.ipynb  taller_1.ipynb
deep_learning/sequential/: char_rnn_classification_lightning.ipynb  crnn.ipynb
src/settings/: config.py
